--- a/stylemain.css
+++ b/stylemain.css
@@ -168,6 +168,7 @@ height: 9px;
 
 
 .reviews {
+        margin: auto;
         background-color: lightgrey;
 	text-align: center;
 	padding-bottom: 80px;
