--- a/stylemain.css
+++ b/stylemain.css
@@ -171,13 +171,16 @@ height: 9px;
         margin: auto;
         background-color: lightgrey;
 	text-align: center;
-	padding-bottom: 80px;
+	padding-bottom: 50px;
+        padding-top: 20px;
+        border-radius: 20px;
+        padding: 30px;
 }
 
 .reviews-content {
 	display: flex;
 	justify-content: space-between;
-	margin-top: 50px;
+
 }
 
 .reviews-1 {
@@ -189,9 +192,9 @@ height: 9px;
 }
 
 .reviews-1 img {
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
+	width: 100%;
+	height: 35%;
+	border-radius: 20px;
 	margin-bottom: 5px;
 }
 
@@ -206,3 +209,10 @@ height: 9px;
 	margin-bottom: 0;
 
 }
+
+.reviews-1:hover { 
+  background-color: goldenrod;
+  transition: background-color 0.3s ease;
+  border-radius: 10px;
+}
+
