--- a/stylemain.css
+++ b/stylemain.css
@@ -1,11 +1,25 @@
 .title h1 {
+ font-family: "DM Serif Display", serif;
+  font-weight: 800;
+  font-style: italic;
 font-size: 70px;
-
+  text-decoration: none;
+         text-shadow:
+        -1px -1px 0 white,
+         1px -1px 0 white,
+        -1px  1px 0 white,
+         1px  1px 0 white;
 }
 
 .title h2 {
 color: white;
-
+/* -webkit-text-stroke: 1px black; */
+   text-shadow:
+        -1px -1px 0 black,
+         1px -1px 0 black,
+        -1px  1px 0 black,
+         2px  1px 0 black;
+font-weight: 500;
 }
 
 h2 {
@@ -22,15 +36,9 @@ color: white;
 
 }
 
-body {
-        margin: 0;
-	padding: 0;
-	background-image: url('res/bg.png'); 
-	background-size: cover;
-	background-position: center;
-	 
 
-
+hr {
+margin: 0;
 }
 
 .title {
@@ -39,17 +47,27 @@ body {
  background-position: center;
  background-size: cover;
  background-image: url('res/spacetitle.png') ; 
+  background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+}
+
+
+body {
+        margin: 0;
+	padding: 0;
+	background-image: url('res/bg.png'); 
+	background-size: cover;
+	background-position: center;
+
 
 }
 
 
-.footer p {
-     color:black;
-     background-color: white;
-     font:cursive;
 
-         }
-
+     
 
 
  .logofix {
@@ -155,7 +173,6 @@ height: 9px;
 
 
 .subtitle h2 {
-  font-family: 'Arial', sans-serif;
   font-weight: 700;
   font-style: italic;
   text-decoration: none;
@@ -168,24 +185,31 @@ height: 9px;
 
 
 .reviews {
-        margin: auto;
-        background-color: lightgrey;
-	text-align: center;
+ margin: 0;
+ padding: 0;
+ background-position: center;
+ background-size: cover;
+ background-image: url('res/spacetitle.png') ; 
+ background-attachment: fixed;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
+ position: relative;
+        text-align: center;
 	padding-bottom: 50px;
         padding-top: 20px;
-        border-radius: 20px;
         padding: 30px;
 }
 
 .reviews-content {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 
 }
 
 .reviews-1 {
         background-color: white;
-	flex-basis: calc(20% - 40px);
+	flex-basis: calc(20% - 50px);
 	padding: 20px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 	border-radius: 20px;
@@ -212,7 +236,7 @@ text-decoration: none;
 }
 
 .reviews-1 p {
-	margin-bottom: 0;
+margin: auto;
 
 }
 
@@ -225,3 +249,49 @@ text-decoration: none;
 .reviews-1 p {
 color: black;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.bgfooter {
+ margin: 0;
+ padding: 0;
+ background-position: center;
+ background-size: cover;
+ background-image: url('res/spacetitle.png') ; 
+ background-attachment: fixed;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
+ position: relative;
+
+}
+
+.footer img {
+padding: 20px;
+}
+
+.footer p {
+margin: 0;
+     color:black;
+     background-color: white;
+     font:cursive;
+
+         }
