--- a/stylemain.css
+++ b/stylemain.css
@@ -41,18 +41,21 @@ hr {
 margin: 0;
 }
 
-.title {
+
+.bgeffect {
  margin: 0;
  padding: 0;
  background-position: center;
  background-size: cover;
  background-image: url('res/spacetitle.png') ; 
-  background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      position: relative;
+ background-attachment: fixed;
+ background-repeat: no-repeat;
+ background-size: cover;
+ position: relative; 
+
+
 }
+
 
 
 body {
@@ -185,16 +188,6 @@ height: 9px;
 
 
 .reviews {
- margin: 0;
- padding: 0;
- background-position: center;
- background-size: cover;
- background-image: url('res/spacetitle.png') ; 
- background-attachment: fixed;
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
- position: relative;
         text-align: center;
 	padding-bottom: 50px;
         padding-top: 20px;
@@ -232,10 +225,11 @@ height: 9px;
 
 .reviews-1 a {
 text-decoration: none;
-
+margin: auto;
 }
 
 .reviews-1 p {
+color: black;
 margin: auto;
 
 }
@@ -246,9 +240,6 @@ margin: auto;
   border-radius: 10px;
 }
 
-.reviews-1 p {
-color: black;
-}
 
 
 
@@ -270,19 +261,6 @@ color: black;
 
 
 
-.bgfooter {
- margin: 0;
- padding: 0;
- background-position: center;
- background-size: cover;
- background-image: url('res/spacetitle.png') ; 
- background-attachment: fixed;
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
- position: relative;
-
-}
 
 .footer img {
 padding: 20px;
@@ -293,5 +271,6 @@ margin: 0;
      color:black;
      background-color: white;
      font:cursive;
+font-size: 7px;
 
          }
