bgdontworkonmobile check that

--- a/stylemain.css
+++ b/stylemain.css
@@ -77,7 +77,7 @@ display: block;
  padding: 0;
  background-position: center;
  background-size: cover;
- background-image: url('res/spacemobile.png') ; 
+ background-image: url('res/spacetitle.png') ; 
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
