--- a/articlesfrontpage/articstyle.css
+++ b/articlesfrontpage/articstyle.css
@@ -1,8 +1,17 @@
+.title {
+ margin: 0;
+	padding: 0;
+	background-image: url('res/titlebg.png'); 
+	background-size: cover;
+	background-position: center;
+
+}
+
 .title h1 {
  font-family: "DM Serif Display", serif;
   font-weight: 800;
   font-style: italic;
-font-size: 70px;
+font-size: 50px;
   text-decoration: none;
          text-shadow:
         -1px -1px 0 white,
@@ -11,28 +20,19 @@ font-size: 70px;
          1px  1px 0 white;
 }
 
-.title h2 {
-color: white;
-/* -webkit-text-stroke: 1px black; */
-   text-shadow:
-        -1px -1px 0 black,
-         1px -1px 0 black,
-        -1px  1px 0 black,
-         2px  1px 0 black;
-font-weight: 500;
-}
 
-h2 {
-color: white; 
+.subtitle h2 {
+font-size: 30px;
 
 }
 
 h3 {
-color:white;
+color: green;
+font-size: 25px;
 }
 
 p { 
-color: white;
+font-size: 20px;
 
 }
 
@@ -72,30 +72,14 @@ display: block;
       display: none;
     }
 
-.bgeffect {
- margin: 0;
- padding: 0;
- background-position: center;
- background-size: cover;
- background-image: url('res/spacetitle.png') ; 
- background-attachment: fixed;
- background-repeat: no-repeat;
- background-size: cover;
- position: relative; 
-
-
-}
-
 
 
 body {
         margin: 0;
 	padding: 0;
-	background-image: url('res/bg.png'); 
+	background-image: url('res/articbg.png'); 
 	background-size: cover;
 	background-position: center;
-
-
 }
 
 
@@ -119,18 +103,6 @@ position: fixed;
 #menu-toggle:checked ~ .menu {
      transform: translateX(-100%);
     }
-
-
-.logofix {
-    position: fixed;
-   z-index: 100;
-   overflow: hidden;
-   margin: 0;
-   margin-bottom: 20px;
-   background-color: rgba(0, 0, 0, 0.6);
-   border-radius: 8px;
-}
-
 
 
 
@@ -209,98 +181,16 @@ border-bottom: 35px solid #87A248;
 height: 9px;
 }
 
-
-
-.subtitle h2 {
-  font-weight: 700;
-  font-style: italic;
-  text-decoration: none;
-}
-
-.subtitle h3 {
- font-size: 40px;
-}
-
-
-
-.reviews {
-        text-align: center;
-	padding-bottom: 50px;
-        padding-top: 20px;
-        padding: 30px;
-}
-
-.reviews-content {
-	display: flex;
-	justify-content: space-evenly;
-
-}
-
-.reviews-1 {
-transition: all 0.4s ease;
-        background-color: white;
-	flex-basis: calc(20% - 50px);
-	padding: 20px;
-	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-	border-radius: 20px;
-}
-
-.reviews-1 img {
-	width: 100%;
-	height: 50%;
-	border-radius: 20px;
-	margin-bottom: 5px;
-}
-
-.reviews-1 h3 {
-	color: blue;
-	font-size: 18px;
-	text-transform: uppercase;
-	margin-bottom: 10px;
-        
-}
-
-.reviews-1 a {
-text-decoration: none;
-margin: auto;
-}
-
-.reviews-1 p {
-color: black;
-margin: auto;
-
-}
-
-.reviews-1:hover { 
-  background-color: lightsalmon;
-
-  border-radius: 20px;
-}
-
-
-
-
-
 .SocialMedia a {
 margin-right: 40px;
 margin: 20px;
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.content img {
+border: 5px solid green;
+border-radius: 30px;
+}
 
 .footer img {
 padding: 20px;
@@ -314,3 +204,19 @@ margin: 0;
 font-size: 12px;
 
          }
+
+
+/* LO DE ARRIBA ES EL MENU y footer  QUE IRA EN TODAS LOS ARTICULOS (ARRIBA) ESTA PARTE DEL CODIGO SERA REUTILZADA EN CASO DE QUE SEA MEJOR USAR UNA HOJA CSS PARA CADA PAGINA, EN LUGAR DE COMPARTIR UNA SOLA HOJA CSS ENTRE TODOS LOS ARTICULOS SIMILAES 
+
+recordar revisar si sobrecarga el servidor o termina siendo mala idea compartir una sola hoja css entre varias paginas html, en ese caso, ignorar las indicaciones de la nota de hasta mero abajo que esta en ingles  
+*/
+
+
+
+
+
+
+/* END OF STYLES FOR ARTICLE ONE, REMEMBER TO CHANGE THE TAGS FOR EVERY CLASS FOLLOWING THIS POINT, LIKE ADDING ARTICLE N FOR EVERY CLASS I MAKE SINCE WELL BE USING THE SAME 
+CSS DOCUMENT FOR EVERY ARTICLE */
+
+
